fix navbar logo on mobile and desktop

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -5,12 +5,17 @@
   z-index: 400;
   right: 0;
   width: 100%;
+  align-items: center;
+}
+.logomobile {
+  display: none;
 }
 .logo {
   margin: 10px;
   width: 100%;
   height: 30px;
 }
+
 .navbar_desk {
   display: flex;
   justify-content: space-between;
@@ -109,7 +114,12 @@
   .no-scroll {
     overflow: hidden;
   }
-  .logomobile {
+  .logo_toggle.open {
+    transition: all 0.5 ease;
+    display: none;
+  }
+  .logo_toggle {
+    transition: all 0.5 ease;
     width: 100px;
     height: 100%;
   }
